first version commit

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wxt-starter",
-  "description": "manifest.json description",
+  "name": "view-heic",
+  "description": "View HEIC Image as Normal Image in Your Browser",
   "private": true,
-  "version": "2.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
