--- a/package.json
+++ b/package.json
@@ -13,19 +13,16 @@
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare",
-    "postversion": "git push origin HEAD && git push --tags origin HEAD && pnpm zip && open .output"
+    "postversion": "git push origin HEAD && git push --tags origin HEAD && pnpm zip && open .output",
+    "test:server": "python3 -m http.server 8080 --bind 127.0.0.1 --directory docs",
+    "test:open": "open http://127.0.0.1:8080/test-improved.html"
   },
   "dependencies": {
-    "heic2any": "^0.0.4",
-    "lodash-es": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "heic-to": "^1.2.1",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@wxt-dev/module-react": "^1.0.0",
     "typescript": "^5.5.2",
     "wxt": "^0.18.10"
   }
