Enhance test server functionality by converting to ESM syntax, updating default file served to 'index.html', and adding a new 'dev:open' script for easier access to the development server. Improved console output for clarity on server status and available pages.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postversion": "git push origin HEAD && git push --tags origin HEAD && pnpm zip && open .output",
     "test:server": "node test-server.js",
     "test:open": "open http://127.0.0.1:8080/test-improved.html",
+    "dev:open": "open http://127.0.0.1:8080/",
     "dev:test": "npm run build && npm run test:server"
   },
   "dependencies": {
