Add Live Photo detection using heic-decode library and enhance README documentation
- Integrated `heic-decode` for advanced Live Photo detection by analyzing HEIC file structure.
- Implemented caching for Live Photo detection results to optimize performance.
- Enhanced visual effects for Live Photo frames with improved animation and resource management.
- Updated README to reflect new Live Photo features and technical improvements.

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dev:test": "npm run build && npm run test:server"
   },
   "dependencies": {
+    "heic-decode": "^2.1.0",
     "heic-to": "^1.2.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@types/heic-decode": "^1.1.2",
     "@types/lodash-es": "^4.17.12",
     "typescript": "^5.5.2",
     "wxt": "^0.18.10"
